recursion.lessons.recursion.koch.Koch.scala.error
Koch:13: error: illegal start of simple expression
snowFlake(,200);
          ^Koch:31: error: ')' expected but '}' found.
}
^